--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Assignment Tracker</title>
+  <title>Smart Ass</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -91,7 +91,7 @@
 </head>
 <body>
   <header>
-    <h1>Assignment Tracker</h1>
+    <h1>Smart Assignment</h1>
   </header>
 
   <nav>
@@ -132,7 +132,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 Assignment Tracker</p>
+    <p>&copy; 2023 Smart Assignment</p>
   </footer>
 
   <script>
