--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     }
 
     header {
-      background-color: #A2757E;
+      background-color: #7596a2;
       color: #fff;
       padding: 20px;
       text-align: center;
     }
 
     nav {
-      background-color: #B4838D;
+      background-color: #7596a2;
       padding: 10px;
       text-align: center;
     }
@@ -43,7 +43,7 @@
     li {
       margin-bottom: 10px;
       padding: 10px;
-      background-color: #B4838D;
+      background-color: #7596a2;
       border-radius: 5px;
     }
 
@@ -63,7 +63,7 @@
 
     button {
       padding: 10px;
-      background-color: #A2757E;
+      background-color: #7596a2;
       color: #fff;
       border: none;
       border-radius: 5px;
@@ -82,7 +82,7 @@
     }
 
     footer {
-      background-color: #333;
+      background-color: #7596a2;
       color: #fff;
       padding: 10px;
       text-align: center;
@@ -117,7 +117,7 @@
             <th>Subject</th>
             <th>Difficulty</th>
             <th>Deadline</th>
-            <th>Esitimated Hour Required</th>
+            <th>Estimated Hours Required</th>
           </tr>
         </thead>
         <tbody>
